# ai-gameplay-highlight-generator

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: __init__.py  api.py  main.py
apps/api/app/application/: __init__.py
apps/api/app/application/services/: capability_resolver.py  hardware_detector.py
apps/api/app/core/: container.py  logging.py
apps/api/app/domain/: __init__.py
apps/api/app/domain/entities/: __init__.py  runtime.py  user.py
apps/api/app/domain/interfaces/: __init__.py  auth.py  config.py  queue.py  repositories.py  storage.py
apps/api/app/infrastructure/: __init__.py
apps/api/app/infrastructure/auth/: local_auth_provider.py
apps/api/app/infrastructure/config/: __init__.py  environment_config_provider.py
apps/api/app/infrastructure/persistence/: __init__.py  database.py
apps/api/app/infrastructure/queue/: __init__.py  local_queue_provider.py
apps/api/app/infrastructure/storage/: local_storage_provider.py
apps/api/tests/: conftest.py  test_api.py  test_application.py  test_capability_resolver.py  test_configuration.py  test_dependency_container.py  test_hardware_detector.py  test_local_auth_provider.py  test_local_queue_provider.py  test_local_storage_provider.py  test_repositories.py
(+69 files in other folders)
